Adding Java lifecycle