@@ -5,9 +5,12 @@ echo "Script"
 # Regenerate Jar with latest changes
 ./gradlew clean build
 
+# -XX:+PrintGCDetails
+
 # Run Jar
 java -Xms256m -Xmx256m \
--verbose:gc -XX:+UseG1GC -XX:-DisableExplicitGC \
+-verbose:gc  \
+-XX:+UseG1GC -XX:-DisableExplicitGC \
 -Djava.security.egd=file:/dev/./urandom \
 -Dcom.sun.management.jmxremote=true \
 -Dcom.sun.management.jmxremote.port=7091 \
